# rlshim

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  cliff.toml  cmake_uninstall.cmake.in  deploy-15.txt  deploy.txt  flake.nix  rlshim.desktop
.github/: FUNDING.yml
.github/workflows/: ci.yml  lint-pr-titles.yml  make-release.yml
.obs/: workflows.yml
packaging/aur/: PKGBUILD.bin.in  PKGBUILD.git.in  PKGBUILD.source.in
packaging/fedora/: rlshim.spec  rlshim.spec.in
packaging/flatpak/: life.srp.rlshim.metainfo.xml  life.srp.rlshim.yml
packaging/opensuse/: _service  fix-print-header.patch  rlshim.spec
scripts/: bump-version.sh
src/: main.cpp
src/rlshim/: auth.cpp  auth.h  cli.cpp  cli.h  curl.h  gui.cpp  gui.h  logger.h  parse.cpp  parse.h  runelite.cpp  runelite.h
tests/: test_parse.cpp
